[package]
name = "rs-stellarbeat-history-verification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stellar-xdr = { git = "https://github.com/stellar/rs-stellar-xdr", features=['base64', 'std'] }
sha2 = "0.10.6"
base64 = "0.13.1"